# mptt

./: .gitignore  README.MD  db.sqlite3  manage.py  pyproject.toml
dropbox_mini/: admin.py  apps.py  models.py  views.py
dropbox_mini/migrations/: 0001_initial.py
dropbox_mini/templates/: index.html
mpttproject/: asgi.py  settings.py  urls.py  wsgi.py
